# barebone-engine

./: .gitignore  .gitmodules  CMakeLists.txt  GLContext.cpp  GLContext.h  README.md  main.cpp
examples/barnes-hutt/: CMakeLists.txt
examples/barnes-hutt/include/: particle.h  simulation.h
examples/barnes-hutt/src/: Main.cpp
examples/hello-world/: CMakeLists.txt  main.cpp
examples/huegene/: CMakeLists.txt  main.cpp
examples/new-barnes-hutt/: CMakeLists.txt  main.cpp
examples/perlin-flow-field/: CMakeLists.txt
examples/perlin-flow-field/src/: particle.cpp
examples/snowflake-generator/: CMakeLists.txt
include/: GLContext.h
new-Barnes-hutt/: main.cpp  new-Barnes-hutt.vcxproj
new-Barnes-hutt/x64/Debug/: new-Barnes-hutt.exe.recipe  new-Barnes-hutt.ilk  vc143.idb
new-Barnes-hutt/x64/Debug/new-Barnes-hutt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  new-Barnes-hutt.lastbuildstate
src/: GLContext.cpp  main.cpp
